# available

./: Cargo.toml  README.md  SKILL.md
.github/workflows/: release.yml
docs/plans/: homebrew-distribution.md
src/: check.rs  generate.rs  lib.rs  main.rs  mcp.rs  score.rs  types.rs
